--- a/FrontEnd/createEvent.css
+++ b/FrontEnd/createEvent.css
@@ -46,11 +46,15 @@
 }
 
 #event-description{
-    margin-top:30px;
+    margin-top:130px;
 }
 
 #event-speaker{
     margin-top: 30px;
+}
+
+#event-description-header{
+    margin-bottom: 20px;
 }
 
 #event-title,#event-description,#event-speaker{
