--- a/FrontEnd/createEvent.css
+++ b/FrontEnd/createEvent.css
@@ -36,6 +36,12 @@
 .event-name h3{
     margin-top: 10px;
 }
+
+.event-name h4 {
+    margin-top: 15px;
+}
+
+
 #event-title{
     height: 30px;
     
@@ -53,13 +59,25 @@
     margin-top: 30px;
 }
 
+#event-image-link{
+    margin-top: 30px;
+    height: 30px;
+
+}   
+
 #event-description-header{
+
     margin-bottom: 20px;
+    
 }
 
-#event-title,#event-description,#event-speaker{
+#event-title,
+#event-description,
+#event-speaker,
+#event-image-link {
     border: none;
-    border-bottom: 2px solid #ff0513;
+    border-radius: 3px;
+    border-bottom: 0.5px solid #ff0513;
     background-color: transparent;
     outline: none;
     margin-top: 5px;
@@ -121,6 +139,9 @@ opacity: 0;
     width: 450px;
     top: 10px;
     display: none;
+    border: none;
+     border-bottom: 0.5px solid #ff0513;
+     background-color: transparent;
     
     
 }
@@ -129,10 +150,11 @@ opacity: 0;
     width: 400px;
     border:none;
     height: 20px;
-    color: rgb(51, 48, 48);
+    color: rgb(255, 255, 255);
     margin-left: 25px;
     outline: none;
     position: absolute;
+     background-color: transparent;
 }
 
 #location-add-but{
@@ -152,6 +174,9 @@ opacity: 0;
     width: 450px;
     top: 10px;
     display: none;
+     border: none;
+     border-bottom: 0.5px solid #ff0513;
+     background-color: transparent;
 
 
 }
@@ -160,10 +185,12 @@ opacity: 0;
     width: 400px;
     border: none;
     height: 20px;
-    color: rgb(51, 48, 48);
+    color: rgb(255, 255, 255);
     margin-left: 25px;
     outline: none;
     position: absolute;
+     background-color: transparent;
+
 }
 
 /* #location-add-but {
@@ -180,8 +207,12 @@ opacity: 0;
 {
     width: 150px;
     height: 20px;
-    color: rgb(26, 25, 25);
+    color: rgb(255, 255, 255);
     margin:0 4px;
+     border: none;
+     border-bottom: 0.5px solid #ff0513;
+     background-color: transparent;
+     outline: none;
   
 }
 
@@ -194,6 +225,7 @@ opacity: 0;
 
 .date-time-container {
     background-color: #040221;
+   
     height: 200px;
     margin-top: 20px;
       border-radius:3px;
