--- a/FrontEnd/index.css
+++ b/FrontEnd/index.css
@@ -28,8 +28,8 @@ html{
 header{
     background-color: #040221;
     padding: 12px;
-    position: fixed;
-    z-index: 1400;
+    position: sticky;
+    /* z-index: 1400; */
     width: 100%;
     top: 0;
     /* backdrop-filter: blur(25rem); */
@@ -117,7 +117,7 @@ header{
     left: 89%;
      display: flex;
      justify-content: center;
-     text-align: center;
+     text-align: left;
 }
 
 .dash-display{
@@ -127,6 +127,7 @@ header{
     display: none;
     z-index: 2;
    position:fixed;
+   padding-left: 10px;
    
 }
 
